--- a/.github/workflows/hello_world_ci.yml
+++ b/.github/workflows/hello_world_ci.yml
@@ -33,6 +33,8 @@ jobs:
         credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
     - name: Upload to Artifact Registry
       run: |
+        gcloud config set artifacts/repository rprod
+        gcloud config set artifacts/location us-central1
         gcloud artifacts print-settings python > ~/.pypirc
         python -m twine upload --repository rprod dist/*
       
