--- a/.github/workflows/hello_world_ci.yml
+++ b/.github/workflows/hello_world_ci.yml
@@ -35,6 +35,7 @@ jobs:
       run: |
         gcloud config set artifacts/repository rprod
         gcloud config set artifacts/location us-central1
+        gcloud config set account rprod-push@wmd-sandbox.iam.gserviceaccount.com
         gcloud artifacts print-settings python > ~/.pypirc
         python -m twine upload --repository rprod dist/*
       
