--- a/.github/workflows/hello_world_ci.yml
+++ b/.github/workflows/hello_world_ci.yml
@@ -24,10 +24,13 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install twine keyrings.google-artifactregistry-auth
+        python -m pip install setuptools
+        python -m pip install wheel
+        python -m pip install twine
+        python -m pip install keyrings.google-artifactregistry-auth
     - name: Build Package
       run: |
-        python setup.py sdist
+        python setup.py sdist bdist_wheel
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0'
