--- a/.github/workflows/hello_world_ci.yml
+++ b/.github/workflows/hello_world_ci.yml
@@ -38,10 +38,10 @@ jobs:
         credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
     - name: Upload to Artifact Registry
       run: |
-        gcloud config set artifacts/repository rprod
+        gcloud config set artifacts/repository foo
         gcloud config set artifacts/location us-central1
-        gcloud config set account hello-world@wmd-sandbox.iam.gserviceaccount.com
-        gcloud auth activate-service-account hello-world@wmd-sandbox.iam.gserviceaccount.com --key-file=$GOOGLE_APPLICATION_CREDENTIALS --project=wmd-sandbox
+        gcloud config set account github-gcr-service-account@norrin-radd.iam.gserviceaccount.com
+        gcloud auth activate-service-account github-gcr-service-account@norrin-radd.iam.gserviceaccount.com --key-file=$GOOGLE_APPLICATION_CREDENTIALS --project=norrin-radd
         gcloud artifacts print-settings python > ~/.pypirc
-        python -m twine upload --repository rprod dist/*
+        python -m twine upload --repository foo dist/*
       
