--- a/.github/workflows/hello_world_ci.yml
+++ b/.github/workflows/hello_world_ci.yml
@@ -21,16 +21,6 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install setuptools
-        python -m pip install wheel
-        python -m pip install twine
-        python -m pip install keyrings.google-artifactregistry-auth
-    - name: Build Package
-      run: |
-        python setup.py sdist bdist_wheel
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0'
@@ -43,5 +33,17 @@ jobs:
         gcloud config set account github-gcr-service-account@norrin-radd.iam.gserviceaccount.com
         gcloud auth activate-service-account github-gcr-service-account@norrin-radd.iam.gserviceaccount.com --key-file=$GOOGLE_APPLICATION_CREDENTIALS --project=norrin-radd
         gcloud artifacts print-settings python > ~/.pypirc
+        mkdir -p ~/.config/pip/
+        cp ~/.pypirc ~/.config/pip/pip.conf
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install setuptools
+        python -m pip install wheel
+        python -m pip install twine
+        python -m pip install keyrings.google-artifactregistry-auth
+    - name: Build Package and Updload
+      run: |
+        python setup.py sdist bdist_wheel
         python -m twine upload --repository foo dist/*
       
