added more secrets

--- a/.github/workflows/hello_world_ci.yml
+++ b/.github/workflows/hello_world_ci.yml
@@ -14,6 +14,10 @@ jobs:
         python-version: [3.7]
     env:
       GOOGLE_APPLICATION_CREDENTIALS: '${{ secrets.GOOGLE_CREDENTIALS }}'
+      GCR_REPO_NAME: '${{ secrets.GCR_REPO_NAME }}'
+      GCR_REPO_LOCATION: '${{ secrets.GCR_REPO_LOCATION }}'
+      GCR_SERVICE_ACCOUNT_EMAIL: '${{ secrets.GCR_SERVICE_ACCOUNT_EMAIL }}'
+      GC_PROJECT_ID: '${{ secrets.GC_PROJECT_ID }}'
 
     steps:
     - uses: actions/checkout@v2
@@ -25,13 +29,13 @@ jobs:
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0'
       with:
-        credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+        credentials_json: $GOOGLE_APPLICATION_CREDENTIALS
     - name: Upload to Artifact Registry
       run: |
-        gcloud config set artifacts/repository foo
-        gcloud config set artifacts/location us-central1
-        gcloud config set account github-gcr-service-account@norrin-radd.iam.gserviceaccount.com
-        gcloud auth activate-service-account github-gcr-service-account@norrin-radd.iam.gserviceaccount.com --key-file=$GOOGLE_APPLICATION_CREDENTIALS --project=norrin-radd
+        gcloud config set artifacts/repository $GCR_REPO_NAME
+        gcloud config set artifacts/location $GCR_REPO_LOCATION
+        gcloud config set account $GCR_SERVICE_ACCOUNT_EMAIL
+        gcloud auth activate-service-account $GCR_SERVICE_ACCOUNT_EMAIL --key-file=$GOOGLE_APPLICATION_CREDENTIALS --project=GC_PROJECT_ID
         gcloud artifacts print-settings python > ~/.pypirc
         mkdir -p ~/.config/pip/
         cp ~/.pypirc ~/.config/pip/pip.conf
@@ -45,5 +49,5 @@ jobs:
     - name: Build Package and Updload
       run: |
         python setup.py sdist bdist_wheel
-        python -m twine upload --repository foo dist/*
+        python -m twine upload --repository $GCR_REPO_NAME dist/*
       
