--- a/.github/workflows/hello_world_ci.yml
+++ b/.github/workflows/hello_world_ci.yml
@@ -29,13 +29,13 @@ jobs:
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0'
       with:
-        credentials_json: $GOOGLE_APPLICATION_CREDENTIALS
+        credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
     - name: Upload to Artifact Registry
       run: |
         gcloud config set artifacts/repository $GCR_REPO_NAME
         gcloud config set artifacts/location $GCR_REPO_LOCATION
         gcloud config set account $GCR_SERVICE_ACCOUNT_EMAIL
-        gcloud auth activate-service-account $GCR_SERVICE_ACCOUNT_EMAIL --key-file=$GOOGLE_APPLICATION_CREDENTIALS --project=GC_PROJECT_ID
+        gcloud auth activate-service-account $GCR_SERVICE_ACCOUNT_EMAIL --key-file='${{ secrets.GOOGLE_CREDENTIALS }}' --project=GC_PROJECT_ID
         gcloud artifacts print-settings python > ~/.pypirc
         mkdir -p ~/.config/pip/
         cp ~/.pypirc ~/.config/pip/pip.conf
