--- a/.github/workflows/hello_world_ci.yml
+++ b/.github/workflows/hello_world_ci.yml
@@ -14,6 +14,7 @@ jobs:
         python-version: [3.7]
     env:
       GOOGLE_APPLICATION_CREDENTIALS: '${{ secrets.GOOGLE_CREDENTIALS }}'
+      GCR_REPO_NAME: '${{ serects.GCR_REPO_NAME }}'
 
     steps:
     - uses: actions/checkout@v2
@@ -28,7 +29,7 @@ jobs:
         credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
     - name: Upload to Artifact Registry
       run: |
-        gcloud config set artifacts/repository foo
+        gcloud config set artifacts/repository $GCR_REPO_NAME
         gcloud config set artifacts/location us-central1
         gcloud config set account github-gcr-service-account@norrin-radd.iam.gserviceaccount.com
         gcloud auth activate-service-account github-gcr-service-account@norrin-radd.iam.gserviceaccount.com --key-file=$GOOGLE_APPLICATION_CREDENTIALS --project=norrin-radd
@@ -45,5 +46,5 @@ jobs:
     - name: Build Package and Updload
       run: |
         python setup.py sdist bdist_wheel
-        python -m twine upload --repository foo dist/*
+        python -m twine upload --repository $GCR_REPO_NAME dist/*
       
